[package]
name = "r13y"
version = "0.1.0"
edition = "2018"
authors = ["Graham Christensen <graham@grahamc.com>"]

[dependencies]
env_logger = "0.6.2"
log = "0.4.8"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.40"
rand = "0.7.0"
digest = "0.8.1"
sha2 = "0.8.0"
tempdir = "0.3.7"
chrono = "0.4.7"
structopt = "0.2.18"
itertools = "0.8.0"
